# hpc-data-analysis

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
blog_posts/2026-02_kings_sustainability_month/: 2026-05-27_hpc_and_sustainability.md  draft_v2.md  post.md  updated_post.md
dev_scripts/: debug_memory.py  dump_schema.py  faculty_stats.py  output_job_flags.txt  output_sacct_steps.txt  query_cpu_mem_diagnostics.py  query_cpu_time.py  query_job_flags.py  query_job_states.py  query_job_structure.py  query_memory.py  query_sacct_steps.py  query_schema.py  query_step_diagnostics.py  query_submit_line.py  query_table_defs.py  query_tres.py  query_tres_usage_vs_rusage.py  verify_sacct_mysql_compatibility.py
dev_scripts/output/: output_cpu_mem_diagnostics.txt  output_step_diagnostics.txt  output_submit_line.txt  output_verify_sacct_mysql_compatibility.txt
docs/: notebooks.md
docs/analysis/: data_caveats.md  efficiency_metrics.md  index.md  interpreting_results.md  open_questions.md
docs/development/: cpu_accounting.md  dev_scripts_guide.md  index.md  job_states_and_flags.md  memory_accounting.md  slurm_database_schema.md  tres_encoding.md
notebooks/: 2026-02_sustainability_month_blog_post.ipynb  blog_2026-02_sustainability.ipynb  visualisation.ipynb  visualisation_infrastructure.ipynb  visualisation_users.ipynb
results/data/: .gitkeep
src/hpc_data_analysis/: aggregate_stats.py  job_stats.py  slurm_utils.py
