[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-data-analysis"
version = "0.1.0"
description = "HPC cluster usage analysis — resource efficiency metrics from Slurm accounting data"
requires-python = ">=3.9"
dependencies = [
    "mysql-connector-python>=8,<10",
    "python-ldap>=3.4,<4",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
notebook = [
    "pandas>=2,<4",
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<0.15",
    "scipy>=1.11,<2",
    "ipywidgets>=8,<9",
    "statsmodels>=0.14,<0.15",
]

[project.scripts]
hpc-aggregate-stats = "hpc_data_analysis.aggregate_stats:main"
hpc-job-stats = "hpc_data_analysis.job_stats:main"

[tool.setuptools.packages.find]
where = ["src"]
